Make detail course page show only after resource has been loaded (Preventing flickering on page refresh); Make duration formatting directive

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -228,3 +228,7 @@ textarea {
   float: left;
   padding-right: 10px;
 }
+
+.pt-5 {
+  padding-top: 5px;
+}
